--- a/style.css
+++ b/style.css
@@ -92,8 +92,8 @@ body {
   align-items: center;
 }
 
-.action-content > div:not(:last-child) {
-  margin-bottom: 0.5rem;
+.action-content > *:not(:last-child) {
+  margin-bottom: 1rem;
 }
 
 .image-presentation {
